--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <img src="Images/Group 1830.png" alt=""
                 style="top: 72px; left: 84px; width: 159px;; height: 32px; position:absolute;">
             <img src="Images/share_svgrepo.com.png" alt=""
-                style="top: 81px; left: 324px; width:18px; height: 18px; position:absolute;">
+                style="top: 81px; left: 324px; width:18px; height: 18px; position:absolute;" class="cursor">
             <img src="Images/Group 1832.png" alt=""
-                style="top: 70px; left: 247px; width:37px; height: 32px; position:absolute;">
+                style="top: 70px; left: 247px; width:37px; height: 32px; position:absolute;" class="cursor">
 
         </div>
     </header>
@@ -31,36 +31,36 @@
         <h2>Services</h2>
         <div class="service-item">
             <div class="service-item-content">
-                <div><img src="Images/location-pin-map_svgrepo.com.png" alt=""></div>
+                <div class="cursor"><img src="Images/location-pin-map_svgrepo.com.png" alt=""></div>
                 <p>Nearby Parking</p>
             </div>
             <div class="service-item-content">
-                <div><img src="Images/electric-car-illustration-1_svgrepo.com.png" alt=""></div>
+                <div class="cursor"><img src="Images/electric-car-illustration-1_svgrepo.com.png" alt=""></div>
                 <p>EV Parking</p>
             </div>
             <div class="service-item-content">
-                <div><img src="Images/Group.png" alt=""></div>
+                <div class="cursor"><img src="Images/Group.png" alt=""></div>
                 <p>Car Wash</p>
             </div>
             <div class="service-item-content">
-                <div><img src="Images/Vector.png" alt=""></div>
+                <div class="cursor"><img src="Images/Vector.png" alt=""></div>
                 <p>Vehicle Insurance</p>
             </div>
             <div class="service-item-content">
-                <div><img src="Images/crane-truck_svgrepo.com.png" alt=""></div>
+                <div class="cursor"><img src="Images/crane-truck_svgrepo.com.png" alt=""></div>
                 <p>Roadside Assistance</p>
             </div>
             <div class="service-item-content">
-                <div><img src="Images/ticket_svgrepo.com.png" alt=""></div>
+                <div class="cursor"><img src="Images/ticket_svgrepo.com.png" alt=""></div>
                 <p>Pay Chalan</p>
             </div>
             <div class="service-item-content">
-                <div><img src="Images/Group 447.png" alt=""></div>
+                <div class="cursor"><img src="Images/Group 447.png" alt=""></div>
                 <p>Toll Estimator</p>
             </div>
 
             <div class="service-item-content">
-                <div><img src="Images/Group 418.svg" alt=""></div>
+                <div class="cursor"><img src="Images/Group 418.svg" alt=""></div>
                 <p>Valet Parking</p>
             </div>
 
@@ -73,27 +73,27 @@
     <div class="fast-recharge">
         <h2>Fast Recharge</h2>
         <p style="color: #595959; font-family: Poppins;">Get upto 100% cashback on first 3 Fastag Recharge</p>
-        <div><img src="Images/Group 430.png" alt=""> <img src="Images/Frame 279.png" alt=""></div>
-        <div style="display: flex; align-items: center;"><img src="Images/Powered by.png" alt=""> <img
+        <div ><img src="Images/Group 430.png" alt=""> <a href=""><img src="Images/Frame 279.png" alt="" class="cursor"></a></div>
+        <div style="display: flex; align-items: center;"><img src="Images/Powered by.png" alt="" > <img
                 src="Images/national-electronic-toll-collection-netc-logo-vector_svgrepo.com.png" alt=""> <img
                 src="Images/bharat-billpay-seeklogo.com_svgrepo.com.png" alt=""></div>
         <img src="Images/Rectangle 544.png" alt="" style="color: #F5F4F4; height:3px; width: 290px;">
         <h2>Discover</h2>
         <div class="fast-rechange-flex">
             <div>
-                <div><img src="Images/shopping_bag.svg" alt=""></div>
+                <div class="cursor"><img src="Images/shopping_bag.svg" alt=""></div>
                 <p>Buy FASTag</p>
             </div>
             <div>
-                <div><img src="Images/published_with_changes.svg" alt=""></div>
+                <div class="cursor"><img src="Images/published_with_changes.svg" alt=""></div>
                 <p>Replace FASTag</p>
             </div>
             <div>
-                <div><img src="Images/done_all.svg" alt=""></div>
+                <div class="cursor"><img src="Images/done_all.svg" alt=""></div>
                 <p>Active FASTag</p>
             </div>
             <div>
-                <div><img src="Images/scan_delete.svg" alt=""></div>
+                <div class="cursor"><img src="Images/scan_delete.svg" alt=""></div>
                 <p>Close FASTa</p>
             </div>
         </div>
@@ -102,21 +102,21 @@
     <img src="Images/Rectangle 20.png" alt="" style=" position: absolute ; top: 739px; left: 16px;">
     <img src="Images/Add money to wallet.png" alt="" style=" position: absolute ; top: 768px; left: 35px;">
     <img src="Images/Get 2% cashback.png" alt="" style=" position: absolute ; top: 788px; left: 35px;">
-    <img src="Images/Frame 2.png" alt="" style=" position: absolute ; top: 824px; left: 35px;">
+    <a href=""><img src="Images/Frame 2.png" alt="" style=" position: absolute ; top: 824px; left: 35px;" class="cursor"></a>
     <img src="Images/Frame.png" alt="" style=" position: absolute ; top: 754px; left: 216px;">
     <img src="Images/Group 436.png" alt="" style=" position: absolute ; top: 891px; left: 158px;">
 
     <div class="other">
         <p>Others</p>
     </div>
-    <img src="Images/Rectangle 370.png" alt="" style=" position: absolute ; top: 972px; left: 34px;">
-    <img src="Images/Rectangle 370.png" alt="" style=" position: absolute ; top: 972px; left: 114px;">
-    <img src="Images/Rectangle 370.png" alt="" style=" position: absolute ; top: 972px; left: 192px;">
-    <img src="Images/Rectangle 370.png" alt="" style=" position: absolute ; top: 972px; left: 271px;">
-    <img src="Images/Group 470.svg" alt="" style=" position: absolute ; top: 982px; left: 47px;">
-    <img src="Images/Group 471.svg" alt="" style=" position: absolute ; top: 982px; left: 125px;">
-    <img src="Images/shop-bag_svgrepo.com.svg" alt="" style=" position: absolute ; top: 982px; left: 203px;">
-    <img src="Images/car_svgrepo.com.svg" alt="" style=" position: absolute ; top: 982px; left: 283px;">
+    <a href=""><img src="Images/Rectangle 370.png" alt="" style=" position: absolute ; top: 972px; left: 34px;" class="cursor"></a>
+    <a href=""><img src="Images/Rectangle 370.png" alt="" style=" position: absolute ; top: 972px; left: 114px;" class="cursor"></a>
+    <a href=""><img src="Images/Rectangle 370.png" alt="" style=" position: absolute ; top: 972px; left: 192px;" class="cursor"></a>
+    <a href=""><img src="Images/Rectangle 370.png" alt="" style=" position: absolute ; top: 972px; left: 271px;" class="cursor"></a>
+    <a href=""><img src="Images/Group 470.svg" alt="" style=" position: absolute ; top: 982px; left: 47px;" class="cursor"></a>
+    <a href=""><img src="Images/Group 471.svg" alt="" style=" position: absolute ; top: 982px; left: 125px;" class="cursor"></a>
+    <a href=""><img src="Images/shop-bag_svgrepo.com.svg" alt="" style=" position: absolute ; top: 982px; left: 203px;" class="cursor"></a>
+    <a href=""><img src="Images/car_svgrepo.com.svg" alt="" style=" position: absolute ; top: 982px; left: 283px;" class="cursor"></a>
     <p style="font-size: 10px; font-weight: 600; color: #434343; position: absolute ; top: 1020px; left: 39px;">Rentout
         <br> Helmet</p>
     <img src="Images/Fuel Price.png" alt="" style=" position: absolute ; top: 1020px; left: 113px;">
@@ -130,20 +130,20 @@
         <div class="fast-rechange-flex">
 
             <div>
-                <div><img src="Images/Group.png" alt=""></div>
+                <div class="cursor"><img src="Images/Group.png" alt=""></div>
                 <p>Car Wash</p>
             </div>
             <div>
-                <div><img src="Images/Group 464.svg" alt=""></div>
+                <div class="cursor"><img src="Images/Group 464.svg" alt=""></div>
                 <p>Estimate Toll</p>
             </div>
 
             <div>
-                <div><img src="Images/shopping_bag.svg" alt=""></div>
+                <div class="cursor"><img src="Images/shopping_bag.svg" alt=""></div>
                 <p>Shop</p>
             </div>
             <div>
-                <div><img src="Images/traffic-light_svgrepo.com.svg" alt=""></div>
+                <div class="cursor"><img src="Images/traffic-light_svgrepo.com.svg" alt=""></div>
                 <p>Protocols</p>
             </div>
         </div>
@@ -153,7 +153,7 @@
     <img src="Images/Monthly Parking.png" alt="" style=" position: absolute ; top: 1483px; left: 33px;">
     <img src="Images/Dedicated parking available near you..png" alt=""
         style=" position: absolute ; top: 1501px; left: 33px;">
-    <img src="Images/Frame 273.png" alt="" style=" position: absolute ; top: 1535px; left: 31px;">
+    <a href=""><img src="Images/Frame 273.png" alt="" style=" position: absolute ; top: 1535px; left: 31px;" class="cursor"></a>
     <img src="Images/Group 465.png" alt=""
         style=" position: absolute ; top: 1514.98px; left: 122.98px; width: 42.2px; height: 46.82px;">
     <img src="Images/Frame 275.png" alt="" style=" position: absolute ; top: 1469px; left: 185px;">
@@ -161,51 +161,51 @@
         style=" position: absolute ; top: 1483px; left: 209px; width: 110px; height: 14px;">
     <img src="Images/Elite car grooming at your doorstep..png" alt=""
         style=" position: absolute ; top: 1501px; left: 203px;">
-    <img src="Images/Frame 273.png" alt="" style=" position: absolute ; top: 1535px; left: 200px;">
+    <a href=""><img src="Images/Frame 273.png" alt="" style=" position: absolute ; top: 1535px; left: 200px;" class="cursor"></a>
     <img src="Images/Group 465.png" alt=""
         style=" position: absolute ; top: 1514.98px; left: 122.98px; width: 42.2px; height: 46.82px;">
     <div class="Recharge">
         <h2>Recharge & Bill Payments</h2>
         <div class="fast-rechange-flex">
 
-            <div>
-                <div><img src="Images/barrier-and-car-svgrepo-com 6.png" alt=""></div>
+            <div >
+                <div class="cursor"><img src="Images/barrier-and-car-svgrepo-com 6.png" alt=""></div>
                 <p>Fastag
                     Recharge</p>
             </div>
             <div>
-                <div><img src="Images/essential-mobile-smartphone-svgrepo-com 1.png" alt=""></div>
+                <div class="cursor"><img src="Images/essential-mobile-smartphone-svgrepo-com 1.png" alt=""></div>
                 <p>Mobile
                     Recharge</p>
             </div>
 
             <div>
-                <div><img src="Images/electricity-svgrepo-com 1.png" alt=""></div>
+                <div class="cursor"><img src="Images/electricity-svgrepo-com 1.png" alt=""></div>
                 <p>Electricity</p>
             </div>
             <div>
-                <div><img src="Images/water-null-water-tap-water-valve-svgrepo-com 1.png" alt=""></div>
+                <div class="cursor"><img src="Images/water-null-water-tap-water-valve-svgrepo-com 1.png" alt=""></div>
                 <p>Water</p>
             </div>
         </div>
         <div class="fast-rechange-flex">
 
             <div>
-                <div><img src="Images/gas-tank-icon 1.png" alt=""></div>
+                <div class="cursor"><img src="Images/gas-tank-icon 1.png" alt=""></div>
                 <p>Gas
                     Cylinder</p>
             </div>
             <div>
-                <div><img src="Images/hand-money-svgrepo-com 1.png" alt=""></div>
+                <div class="cursor"><img src="Images/hand-money-svgrepo-com 1.png" alt=""></div>
                 <p>Loan Payment</p>
             </div>
 
             <div>
-                <div><img src="Images/ground-satelite-dish-svgrepo-com 1.png" alt=""></div>
+                <div class="cursor"><img src="Images/ground-satelite-dish-svgrepo-com 1.png" alt=""></div>
                 <p>DTH</p>
             </div>
             <div>
-                <div><img src="Images/house-rent-svgrepo-com 1.png" alt=""></div>
+                <div class="cursor"><img src="Images/house-rent-svgrepo-com 1.png" alt=""></div>
                 <p>House Rent</p>
             </div>
         </div>
@@ -217,31 +217,31 @@
     </div>
     <img src="Images/Pay using Axis Bank Credit & Debit Cards.png" alt=""
         style=" position: absolute ; top: 1923px; left: 32px;">
-    <img src="Images/Frame 277.png" alt="" style=" position: absolute ; top: 1948px; left: 31px;">
+    <a href=""><img src="Images/Frame 277.png" alt="" style=" position: absolute ; top: 1948px; left: 31px;" class="cursor"></a>
     <img src="Images/Group 1.png" alt="" style=" position: absolute ; top: 1951px; left: 148px;">
     <img src="Images/Group 556.png" alt="" style=" position: absolute ; top: 1858px; left: 248px;">
     <div class="Car-center">
         <h2>Your Car's Center</h2>
         <div class="fast-rechange-flex">
 
-            <div>
-                <div><img src="Images/ticket_svgrepo.com.png" alt=""></div>
+            <div >
+                <div class="cursor"><img src="Images/ticket_svgrepo.com.png" alt=""></div>
                 <p>Pay
                     Challans</p>
             </div>
-            <div>
-                <div><img src="Images/public-security-svgrepo-com 1.png" alt=""></div>
+            <div >
+                <div class="cursor"><img src="Images/public-security-svgrepo-com 1.png" alt=""></div>
                 <p>Crime
                     Reporter</p>
             </div>
 
-            <div>
-                <div><img src="Images/building-svgrepo-com (1) 1.png" alt=""></div>
+            <div >
+                <div class="cursor"><img src="Images/building-svgrepo-com (1) 1.png" alt=""></div>
                 <p>RTO
                     Center</p>
             </div>
-            <div>
-                <div><img src="Images/exhaust-svgrepo-com 1.png" alt=""></div>
+            <div >
+                <div class="cursor"><img src="Images/exhaust-svgrepo-com 1.png" alt=""></div>
                 <p>PUCC
                     Center</p>
             </div>
@@ -264,17 +264,17 @@
         <h2>Exclusive Offers</h2>
         <div class="fast-rechange-flex">
 
-            <div>
-                <div><img src="Images/redeem.png" alt=""></div>
+            <div >
+                <div class="cursor"><img src="Images/redeem.png" alt=""></div>
                 <p>Rewards</p>
             </div>
-            <div>
-                <div><img src="Images/discount-promo-ecommerce_svgrepo.com.svg" alt=""></div>
+            <div >
+                <div class="cursor"><img src="Images/discount-promo-ecommerce_svgrepo.com.svg" alt=""></div>
                 <p>Discounts</p>
             </div>
 
-            <div>
-                <div><img src="Images/loudspeaker-6_svgrepo.com.svg" alt=""></div>
+            <div >
+                <div class="cursor"><img src="Images/loudspeaker-6_svgrepo.com.svg" alt=""></div>
                 <p>Refer & Win</p>
             </div>
 
