Park Quick changes added for buttons

--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
         <h2>Discover</h2>
         <div class="fast-rechange-flex">
             <div>
-                <div class="cursor"><img src="Images/shopping_bag.svg" alt=""></div>
+                <a href=""><div class="cursor"><img src="Images/shopping_bag.svg" alt=""></div></a>
                 <p>Buy FASTag</p>
             </div>
             <div>
-                <div class="cursor"><img src="Images/published_with_changes.svg" alt=""></div>
+                <a href=""><div class="cursor"><img src="Images/published_with_changes.svg" alt=""></div></a>
                 <p>Replace FASTag</p>
             </div>
             <div>
-                <div class="cursor"><img src="Images/done_all.svg" alt=""></div>
+                <a href=""> <div class="cursor"><img src="Images/done_all.svg" alt=""></div></a>
                 <p>Active FASTag</p>
             </div>
             <div>
-                <div class="cursor"><img src="Images/scan_delete.svg" alt=""></div>
+                <a href=""><div class="cursor"><img src="Images/scan_delete.svg" alt=""></div></a>
                 <p>Close FASTa</p>
             </div>
         </div>
@@ -130,20 +130,20 @@
         <div class="fast-rechange-flex">
 
             <div>
-                <div class="cursor"><img src="Images/Group.png" alt=""></div>
+                <a href=""> <div class="cursor"><img src="Images/Group.png" alt=""></div></a>
                 <p>Car Wash</p>
             </div>
             <div>
-                <div class="cursor"><img src="Images/Group 464.svg" alt=""></div>
+                <a href=""><div class="cursor"><img src="Images/Group 464.svg" alt=""></div></a>
                 <p>Estimate Toll</p>
             </div>
 
             <div>
-                <div class="cursor"><img src="Images/shopping_bag.svg" alt=""></div>
+                <a href=""> <div class="cursor"><img src="Images/shopping_bag.svg" alt=""></div></a>
                 <p>Shop</p>
             </div>
             <div>
-                <div class="cursor"><img src="Images/traffic-light_svgrepo.com.svg" alt=""></div>
+                <a href=""><div class="cursor"><img src="Images/traffic-light_svgrepo.com.svg" alt=""></div></a>
                 <p>Protocols</p>
             </div>
         </div>
@@ -169,43 +169,43 @@
         <div class="fast-rechange-flex">
 
             <div >
-                <div class="cursor"><img src="Images/barrier-and-car-svgrepo-com 6.png" alt=""></div>
+                <a href=""> <div class="cursor"><img src="Images/barrier-and-car-svgrepo-com 6.png" alt=""></div></a>
                 <p>Fastag
                     Recharge</p>
             </div>
             <div>
-                <div class="cursor"><img src="Images/essential-mobile-smartphone-svgrepo-com 1.png" alt=""></div>
+                <a href=""> <div class="cursor"><img src="Images/essential-mobile-smartphone-svgrepo-com 1.png" alt=""></div></a>
                 <p>Mobile
                     Recharge</p>
             </div>
 
             <div>
-                <div class="cursor"><img src="Images/electricity-svgrepo-com 1.png" alt=""></div>
+                <a href="">  <div class="cursor"><img src="Images/electricity-svgrepo-com 1.png" alt=""></div></a>
                 <p>Electricity</p>
             </div>
             <div>
-                <div class="cursor"><img src="Images/water-null-water-tap-water-valve-svgrepo-com 1.png" alt=""></div>
+                <a href="">  <div class="cursor"><img src="Images/water-null-water-tap-water-valve-svgrepo-com 1.png" alt=""></div></a>
                 <p>Water</p>
             </div>
         </div>
         <div class="fast-rechange-flex">
 
             <div>
-                <div class="cursor"><img src="Images/gas-tank-icon 1.png" alt=""></div>
+                <a href="">  <div class="cursor"><img src="Images/gas-tank-icon 1.png" alt=""></div></a>
                 <p>Gas
                     Cylinder</p>
             </div>
             <div>
-                <div class="cursor"><img src="Images/hand-money-svgrepo-com 1.png" alt=""></div>
+                <a href="">  <div class="cursor"><img src="Images/hand-money-svgrepo-com 1.png" alt=""></div></a>
                 <p>Loan Payment</p>
             </div>
 
             <div>
-                <div class="cursor"><img src="Images/ground-satelite-dish-svgrepo-com 1.png" alt=""></div>
+                <a href="">  <div class="cursor"><img src="Images/ground-satelite-dish-svgrepo-com 1.png" alt=""></div></a>
                 <p>DTH</p>
             </div>
             <div>
-                <div class="cursor"><img src="Images/house-rent-svgrepo-com 1.png" alt=""></div>
+                <a href="">  <div class="cursor"><img src="Images/house-rent-svgrepo-com 1.png" alt=""></div></a>
                 <p>House Rent</p>
             </div>
         </div>
@@ -225,23 +225,23 @@
         <div class="fast-rechange-flex">
 
             <div >
-                <div class="cursor"><img src="Images/ticket_svgrepo.com.png" alt=""></div>
+                <a href="">  <div class="cursor"><img src="Images/ticket_svgrepo.com.png" alt=""></div></a>
                 <p>Pay
                     Challans</p>
             </div>
             <div >
-                <div class="cursor"><img src="Images/public-security-svgrepo-com 1.png" alt=""></div>
+                <a href=""> <div class="cursor"><img src="Images/public-security-svgrepo-com 1.png" alt=""></div></a>
                 <p>Crime
                     Reporter</p>
             </div>
 
             <div >
-                <div class="cursor"><img src="Images/building-svgrepo-com (1) 1.png" alt=""></div>
+                <a href=""> <div class="cursor"><img src="Images/building-svgrepo-com (1) 1.png" alt=""></div></a>
                 <p>RTO
                     Center</p>
             </div>
             <div >
-                <div class="cursor"><img src="Images/exhaust-svgrepo-com 1.png" alt=""></div>
+                <a href=""> <div class="cursor"><img src="Images/exhaust-svgrepo-com 1.png" alt=""></div></a>
                 <p>PUCC
                     Center</p>
             </div>
@@ -265,16 +265,16 @@
         <div class="fast-rechange-flex">
 
             <div >
-                <div class="cursor"><img src="Images/redeem.png" alt=""></div>
+                <a href="">  <div class="cursor"><img src="Images/redeem.png" alt=""></div></a>
                 <p>Rewards</p>
             </div>
             <div >
-                <div class="cursor"><img src="Images/discount-promo-ecommerce_svgrepo.com.svg" alt=""></div>
+                <a href="">  <div class="cursor"><img src="Images/discount-promo-ecommerce_svgrepo.com.svg" alt=""></div></a>
                 <p>Discounts</p>
             </div>
 
             <div >
-                <div class="cursor"><img src="Images/loudspeaker-6_svgrepo.com.svg" alt=""></div>
+                <a href="">  <div class="cursor"><img src="Images/loudspeaker-6_svgrepo.com.svg" alt=""></div></a>
                 <p>Refer & Win</p>
             </div>
 
